Removing and ready function

--- a/index.html
+++ b/index.html
@@ -6,9 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Todo</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
 </head>
 
 <body>
+    <section class="todo-list"></section>
+
+    <!--  <article class='todo-item'>
+        <div class='content'>
+            <span class='text'>${todoItem.text}</span>
+            <span class='text'>${todoItem.author}</span>
+        </div>
+        <div class='action-icons'>
+            <span>Delete</span>
+            <span>Done</span>
+        </div>
+    </article> -->
+
     <script src="index.js"></script>
 </body>
 
