Add, delete, move up/down, done functions added

--- a/index.html
+++ b/index.html
@@ -10,7 +10,18 @@
 </head>
 
 <body>
-    <section class="todo-list"></section>
+    <h1>Todo List</h1>
+    <section>
+        <form>
+            <input type="text" name="text">
+            <button type="submit">skapa</button>
+        </form>
+    </section>
+
+
+    <section id="todoSection" class="todo-list"></section>
+
+
 
     <!--  <article class='todo-item'>
         <div class='content'>
