--- a/index.html
+++ b/index.html
@@ -7,33 +7,30 @@
     <title>Todo</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap" rel="stylesheet">
 </head>
 
 <body>
-    <h1>Todo List</h1>
-    <section>
-        <form>
-            <input type="text" name="text">
-            <button type="submit">skapa</button>
-        </form>
-    </section>
+    <main>
+        <h1>Todo List</h1>
+        <!--     <label for="userNames">Choose a user:</label>
+    <select name="user-names" id="userNames">
+        <option value="all">All user</option>
+        <option value="judit">Judit</option>
+        <option value="Other">Other</option>
+    </select> -->
 
+        <section>
+            <form>
+                <input type="text" name="text" id="todoInput">
+                <button type="submit" id="submitButton">skapa</button>
+            </form>
+        </section>
 
-    <section id="todoSection" class="todo-list"></section>
-
-
-
-    <!--  <article class='todo-item'>
-        <div class='content'>
-            <span class='text'>${todoItem.text}</span>
-            <span class='text'>${todoItem.author}</span>
-        </div>
-        <div class='action-icons'>
-            <span>Delete</span>
-            <span>Done</span>
-        </div>
-    </article> -->
-
+        <section id="todoSection" class="todo-list"></section>
+    </main>
     <script src="index.js"></script>
 </body>
 
