Choose a user function added

--- a/index.html
+++ b/index.html
@@ -7,20 +7,20 @@
     <title>Todo</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap" rel="stylesheet">
 </head>
 
 <body>
     <main>
         <h1>Todo List</h1>
-        <!--     <label for="userNames">Choose a user:</label>
-    <select name="user-names" id="userNames">
-        <option value="all">All user</option>
-        <option value="judit">Judit</option>
-        <option value="Other">Other</option>
-    </select> -->
+        <label for="userNames">Choose a user:</label>
+        <select name="user-names" id="userNames">
+            <option value="All">All user</option>
+            <option value="Judit">Judit</option>
+            <option value="Other">Other</option>
+        </select>
 
         <section>
             <form>
