--- a/index.html
+++ b/index.html
@@ -16,27 +16,31 @@
     <main>
         <h1>Todo List</h1>
         <section id="saveAuthorSection">
-            <label for="authorNames">Save a user:</label>
+            <label for="authorNames">Save a new user:</label>
             <form id="authorInputForm">
                 <input type="text" name="author" id="authorInput">
                 <button type="submit" id="submitAuthorButton">Save</button>
             </form>
         </section>
+        
         <section>
-            <label for="userNames">Choose a user:</label>
-            <select name="user-names" id="userNames">
-                <option value="All">All user</option>
-                <option value="Judit">Judit</option>
-                <option value="Other">Other</option>
-            </select>
-        </section>
+            <fieldset>
+                <legend>Add new todo:</legend>
+                <label for="userNames">Choose a user:</label>
+                <select name="user-names" id="userNames">
+                    <option value="All">All user</option>
+                    <option value="Judit">Judit</option>
+                    <option value="Other">Other</option>
+                </select>
+                <br>
 
-        <section>
-            <label for="userNames">Add a todo to chosen user:</label>
-            <form id="todoInputForm">
-                <input type="text" name="text" id="todoInput">
-                <button type="submit" id="submitButton">Save</button>
-            </form>
+
+                <label for="userNames">Add a todo to chosen user:</label>
+                <form id="todoInputForm">
+                    <input type="text" name="text" id="todoInput">
+                    <button type="submit" id="submitButton">Save</button>
+                </form>
+            </fieldset>
         </section>
 
         <section id="todoSection" class="todo-list"></section>
