Show/hide todo created time function

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <button type="submit" id="submitAuthorButton">Save</button>
             </form>
         </section>
-        
+
         <section>
             <fieldset>
                 <legend>Add new todo:</legend>
@@ -41,6 +41,10 @@
                     <button type="submit" id="submitButton">Save</button>
                 </form>
             </fieldset>
+        </section>
+        <section id="timeButtonSection">
+            <!--  <button id="showTimeButton">Show todo time</button> -->
+            <button id="sortTodoByTime">Sort todo by time</button>
         </section>
 
         <section id="todoSection" class="todo-list"></section>
