Show-hide todo created time button fix

--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
             </fieldset>
         </section>
         <section id="timeButtonSection">
-            <!--  <button id="showTimeButton">Show todo time</button> -->
-            <button id="sortTodoByTime">Sort todo by time</button>
+            <button id="showTimeButton">Show todo time</button>
+            <!-- <button id="sortTodoByTime">Sort todo by time</button> -->
         </section>
 
         <section id="todoSection" class="todo-list"></section>
