--- a/index.html
+++ b/index.html
@@ -38,13 +38,14 @@
                 <label for="userNames">Add a todo to chosen user:</label>
                 <form id="todoInputForm">
                     <input type="text" name="text" id="todoInput">
+                    <input type="datetime-local" name="timeInput" id="timeInput">
                     <button type="submit" id="submitButton">Save</button>
                 </form>
             </fieldset>
         </section>
         <section id="timeButtonSection">
             <button id="showTimeButton">Show todo time</button>
-            <!-- <button id="sortTodoByTime">Sort todo by time</button> -->
+            <button id="sortTodoByTime">Sort todo by time</button>
         </section>
 
         <section id="todoSection" class="todo-list"></section>
