Show due date button text and hr styling change

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <hr>
             </section>
             <section id="timeButtonSection">
-                <button id="showTimeButton">Show todo time</button>
+                <button id="showTimeButton">Show todo due time</button>
                 <button id="sortTodoByTime">Sort todo by time</button>
             </section>
 
