--- a/index.html
+++ b/index.html
@@ -23,17 +23,15 @@
             </form>
         </section>
         <fieldset>
+            <legend>Add new todo:</legend>
             <section>
-
-                <legend>Add new todo:</legend>
                 <label for="userNames">Choose a user:</label>
                 <select name="user-names" id="userNames">
                     <option value="All">All user</option>
-                    <option value="Judit">Judit</option>
-                    <option value="Other">Other</option>
+                    <!--                     <option value="Judit">Judit</option>
+                    <option value="Other">Other</option> -->
                 </select>
                 <br>
-
 
                 <label for="userNames">Add a todo to chosen user</label>
                 <form id="todoInputForm">
