Due date show/hide to sort

--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
                 <hr>
             </section>
             <section id="timeButtonSection">
-                <button id="showTimeButton">Show todo due time</button>
-                <button id="sortTodoByTime">Sort todo by time</button>
+                <button id="showTimeButton">Show due date</button>
+                <button id="sortTodoByTime">Sort by due date</button>
             </section>
 
             <section id="todoSection" class="todo-list"></section>
